feat: added "Copy Selected Rows to ClipBoard" to tables